[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/img/rectangle.png" type="Texture" id=2]
[ext_resource path="res://assets/img/triangle.png" type="Texture" id=3]
[ext_resource path="res://assets/img/a.png" type="Texture" id=4]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.721893 )
colors = PoolColorArray( 0.0741882, 0.363933, 0.863281, 1, 0.613281, 1, 0.972809, 1 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[node name="main_menu" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 300, 512 )
scale = Vector2( 0.294141, 1027.24 )
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 600, 1024 )
_sections_unfolded = [ "Transform" ]

[node name="rectangle_btn" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="triangle_ btn" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 400.0
margin_right = 450.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="char_btn" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 700.0
margin_right = 450.0
margin_bottom = 1000.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="pressed" from="rectangle_btn" to="." method="_on_rectangle_btn_pressed"]

[connection signal="pressed" from="triangle_ btn" to="." method="_on_triangle__btn_pressed"]

[connection signal="pressed" from="char_btn" to="." method="_on_char_btn_pressed"]


